--- a/.gitleaksignore
+++ b/.gitleaksignore
@@ -2,3 +2,5 @@
 # These are not real secrets - just test patterns for cache key generation
 tests/test_state_manager.sh:generic-api-key:173
 tests/test_state_manager.sh:generic-api-key:179
+/github/workspace/tests/test_state_manager.sh:generic-api-key:173
+/github/workspace/tests/test_state_manager.sh:generic-api-key:179
