fix: remove unwanted Telegram notifications for expected operational conditions
- Enable notifications for scheduled runs by default (monitor automation)
- Remove notifications for user limits reached (expected free tier behavior)
- Remove notifications for instance already exists (expected with state management)
- Remove unused notify_capacity_unavailable() function
- Add comprehensive Telegram notification policy to CLAUDE.md

This resolves issue #76 where users received unwanted notifications for
normal operational conditions that resolve automatically through retry cycles.

Key changes:
- Workflow: ENABLE_NOTIFICATIONS=true for scheduled runs, user choice for manual
- Scripts: Remove 3 unwanted notification calls for expected conditions
- Docs: Clear policy on when to send/not send notifications

Expected behavior:
- Scheduled runs: Notifications enabled, only for successes/actionable failures
- Manual runs: User can toggle notifications via workflow dispatch
- Expected conditions: Silent (limits, capacity constraints, duplicates)
- Actual failures: Always notify (auth errors, config errors, unknowns)

Fixes #76

--- a/.github/workflows/infrastructure-deployment.yml
+++ b/.github/workflows/infrastructure-deployment.yml
@@ -62,7 +62,7 @@ concurrency:
 env:
   # Global environment variables
   DEBUG: ${{ inputs.verbose_output && 'true' || 'false' }}
-  ENABLE_NOTIFICATIONS: ${{ inputs.send_notifications && 'true' || 'false' }}
+  ENABLE_NOTIFICATIONS: ${{ github.event_name == 'workflow_dispatch' && (inputs.send_notifications && 'true' || 'false') || 'true' }}
   # Enable instance check by default to use state management cache (can be overridden manually)
   CHECK_EXISTING_INSTANCE: ${{ github.event_name == 'workflow_dispatch' && (inputs.check_existing_instance && 'true' || 'false') || 'true' }}
   # Suppress OCI CLI file permissions warnings
