--- a/.github/workflows/infrastructure-deployment.yml
+++ b/.github/workflows/infrastructure-deployment.yml
@@ -27,8 +27,9 @@ on:
     # Saturdays and Sundays - lower weekend cloud usage, no overlap with weekday tiers
     - cron: "*/10 * * * 6,0"
 
-  pull_request:
-    types: [opened, synchronize, ready_for_review, reopened]
+  # Disabled to avoid triggering 429 on OCI API; also failures confuse claude when trying to fix PR checks
+  # pull_request:
+  #  types: [opened, synchronize, ready_for_review, reopened]
 
   workflow_dispatch:
     inputs:
