fix: update linter configs to respect disabled style rules
- Add outputs section to create-instance job (fixes GITHUB_ACTIONS linter)
- Disable MD033 in markdownlint config (respects CLAUDE.md policy)
- Disable trailing-spaces in yaml-lint config (respects style policy)

Ensures linter configurations properly implement the intended style rule
disabling as documented in CLAUDE.md linter policy.

--- a/.github/workflows/infrastructure-deployment.yml
+++ b/.github/workflows/infrastructure-deployment.yml
@@ -85,6 +85,8 @@ jobs:
     name: Deploy OCI Infrastructure (Parallel Orchestration)
     permissions:
       contents: read
+    outputs:
+      script_exit_code: ${{ steps.launch-instances.outputs.script_exit_code }}
     env:
       # Common configuration for both shapes
       # Multi-AD support: Use comma-separated list for multiple ADs
